@@ -1,15 +1,15 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
-//     This code was generated by a tool.
-//     Runtime Version:2.0.50727.3082
+//     Este código fue generado por una herramienta.
+//     Versión del motor en tiempo de ejecución:2.0.50727.3603
 //
-//     Changes to this file may cause incorrect behavior and will be lost if
-//     the code is regenerated.
+//     Los cambios en este archivo podrían causar un comportamiento incorrecto y se perderán si
+//     se vuelve a generar el código.
 // </auto-generated>
 //------------------------------------------------------------------------------
 
 // 
-// This source code was auto-generated by wsdl, Version=2.0.50727.1432.
+// This source code was auto-generated by wsdl, Version=2.0.50727.3038.
 // 
 namespace MonkeyWrench.Web.WebServices {
     using System.Diagnostics;
@@ -23,7 +23,7 @@ namespace MonkeyWrench.Web.WebServices {
     
     
     /// <remarks/>
-    [System.CodeDom.Compiler.GeneratedCodeAttribute("wsdl", "2.0.50727.1432")]
+    [System.CodeDom.Compiler.GeneratedCodeAttribute("wsdl", "2.0.50727.3038")]
     [System.Diagnostics.DebuggerStepThroughAttribute()]
     [System.ComponentModel.DesignerCategoryAttribute("code")]
     [System.Web.Services.WebServiceBindingAttribute(Name="WebServicesSoap", Namespace="http://monkeywrench.novell.com/")]
@@ -772,6 +772,34 @@ namespace MonkeyWrench.Web.WebServices {
         public FindHostResponse EndFindHost(System.IAsyncResult asyncResult) {
             object[] results = this.EndInvoke(asyncResult);
             return ((FindHostResponse)(results[0]));
+        }
+        
+        /// <remarks/>
+        [System.Web.Services.Protocols.SoapDocumentMethodAttribute("http://monkeywrench.novell.com/FindRevisionForLane", RequestNamespace="http://monkeywrench.novell.com/", ResponseNamespace="http://monkeywrench.novell.com/", Use=System.Web.Services.Description.SoapBindingUse.Literal, ParameterStyle=System.Web.Services.Protocols.SoapParameterStyle.Wrapped)]
+        public FindRevisionResponse FindRevisionForLane(WebServiceLogin login, [System.Xml.Serialization.XmlElementAttribute(IsNullable=true)] System.Nullable<int> revision_id, string revision, [System.Xml.Serialization.XmlElementAttribute(IsNullable=true)] System.Nullable<int> lane_id, string lane) {
+            object[] results = this.Invoke("FindRevisionForLane", new object[] {
+                        login,
+                        revision_id,
+                        revision,
+                        lane_id,
+                        lane});
+            return ((FindRevisionResponse)(results[0]));
+        }
+        
+        /// <remarks/>
+        public System.IAsyncResult BeginFindRevisionForLane(WebServiceLogin login, System.Nullable<int> revision_id, string revision, System.Nullable<int> lane_id, string lane, System.AsyncCallback callback, object asyncState) {
+            return this.BeginInvoke("FindRevisionForLane", new object[] {
+                        login,
+                        revision_id,
+                        revision,
+                        lane_id,
+                        lane}, callback, asyncState);
+        }
+        
+        /// <remarks/>
+        public FindRevisionResponse EndFindRevisionForLane(System.IAsyncResult asyncResult) {
+            object[] results = this.EndInvoke(asyncResult);
+            return ((FindRevisionResponse)(results[0]));
         }
         
         /// <remarks/>
