@@ -1,3 +1,7 @@
+2010-01-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* WebServices.Generated.cs: Regenerated.
+
 2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* MonkeyWrench.DataClasses.csproj: Updated with new file.
